--- a/ch8/ch8-1-3.css
+++ b/ch8/ch8-1-3.css
@@ -79,7 +79,8 @@ figure{
     text-decoration-line: none;
 }
 #menu li a:hover{
-    background-image: url(img/btn2.png);
+    /*background-image: url(img/btn2.png);*/
+    background-color: greenyellow;
     background-size: contain;
     color: brown;
 }
